# onos-new-app

apps/fixed/: BUILD.bazel
apps/fixed/app/: BUILD.bazel
apps/fixed/app/src/main/java/org/onosproject/fixed/: ChannelData.java  DistributedFixedStore.java  FixedDeviceViewMessageHandler.java  FixedFlowViewMessageHandler.java  FixedManager.java  FixedPortViewMessageHandler.java  FixedService.java  FixedStore.java  FixedUiComponent.java  FixedUtil.java  package-info.java
apps/fixed/web/fixed-gui/: BUILD.bazel  README.md  angular.json  package-lock.json  package.json  tsconfig.json
apps/fixed/web/fixed-gui/projects/fixed-gui-lib/: ng-package.json  package.json  tslint.json
apps/fixed/web/fixed-gui/projects/fixed-gui-lib/src/: public_api.ts
apps/fixed/web/fixed-gui/projects/fixed-gui-lib/src/lib/: fixed-gui-lib.module.ts  fixed-routing.module.ts
apps/fixed/web/fixed-gui/projects/fixed-gui-lib/src/lib/fixed/: fixed.component.disabledspec.ts  fixed.component.html  fixed.component.ts  fixed.theme.css
web/gui2/: BUILD
web/gui2/src/main/webapp/app/: onos-routing.module.ts
